remade the grid in projects to fix the gap between 'Your Projects' and project cards

--- a/admin-dashboard/css/style.css
+++ b/admin-dashboard/css/style.css
@@ -159,13 +159,16 @@ li {
 
 .projects {
     grid-row: 1/3;
+}
+
+.project-cards-container{
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 25px;
 }
 
 .projects > h2 {
-    grid-column: 1/3;
+    margin-bottom: 25px;
 }
 
 .project-card, .announcements-box, .trending-box {
@@ -198,5 +201,48 @@ li {
 
 .announcements-box {
     padding: 40px;
+    display: flex;
+    flex-direction: column;
 }
 
+.announcement-item{
+    padding: 20px 0;
+    border-bottom: 2px solid rgb(0, 0, 0, 0.3);
+}
+
+.announcement-item:last-child {
+    padding-bottom: 0;
+    border-bottom: none;
+}
+
+.announcement-item:first-child {
+    padding-top: 0;
+}
+
+.announcement-item h3{
+    margin-bottom: 5px;
+}
+
+.trending-box {
+    margin-top: 25px;
+    padding: 30px 40px;
+}
+
+.trending img{
+    width: 45px;
+    border-radius: 30px;
+}
+
+.trending-item {
+    display: flex;
+    gap: 20px;
+    margin-bottom: 20px;
+}
+
+.trending-item:last-child {
+    margin-bottom: 0;
+}
+
+.trending-item p:first-child {
+    font-weight: 500;
+}
